--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mern-course",
   "version": "1.0.0",
+  "engines" : { "node" : "0.12.16.3" },
   "description": "social network for developpers",
   "main": "server.js",
   "scripts": {
