--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mern-course",
   "version": "1.0.0",
-  "engines" : { "node" : "0.12" },
+  "engines" : { "node" : "12.16.3", "npm": "6.14.4" },
   "description": "social network for developpers",
   "main": "server.js",
   "scripts": {
